Fix links overflowing the page width

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -91,8 +91,13 @@ $refresh-banner-height: 2.5rem;
   }
 }
 
-p > a {
-  word-break: break-word;
+.tna-service-link {
+  max-width: 100%;
+
+  display: inline-block;
+  overflow: auto;
+
+  white-space: nowrap;
 }
 
 .tna-dl {
